# netherite-lang

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README.md  default.nix  flake.nix  rust-toolchain.toml
.run/: Build AST.run.xml  Build grammar.run.xml  Test parser.run.xml
compiler/llvm/: Cargo.toml
compiler/llvm/src/: lib.rs  target.rs
crates/cool-reporting/codespan-lsp/: Cargo.toml
crates/cool-reporting/topaz-cool-reporting/examples/: readme_preview.rs
crates/lapis-client/src/: project_template.rs
crates/ry/: Cargo.toml
crates/ry-ast/: Cargo.toml
crates/ry-ast-to-graphviz/: generics.ry
crates/ry-ast-to-graphviz/src/: lib.rs
crates/ry-ast/src/: lib.rs  location.rs  precedence.rs  token.rs
crates/ry-lexer/: Cargo.toml
crates/ry-lexer/src/: lib.rs  number.rs
crates/ry-parser/: Cargo.toml
crates/ry-parser/src/: enum.rs  error.rs  expression.rs  function_decl.rs  impl.rs  imports.rs  interface_decl.rs  lib.rs  macros.rs  statement.rs  struct_decl.rs  trait_decl.rs  type.rs
crates/ry-static-analyzer/: Cargo.toml
crates/ry/src/: main.rs
crates/topaz/: Cargo.toml
crates/topaz-ast/: Cargo.toml  build.rs
crates/topaz-ast-to-graphviz/: Cargo.toml
crates/topaz-ast-to-graphviz/src/: lib.rs
crates/topaz-ast/src/: block.rs  file.rs  grammar.lalrpop  grammar.rs  ident.rs  lib.rs  parse.rs  parser.rs  path.rs  pattern.rs  punctuated.rs  token.rs  tokens.rs  types.rs  util.rs  visibility.rs  visit.rs
crates/topaz-ast/src/expr/: mod.rs
crates/topaz-ast/src/item/: func.rs  import.rs  mod.rs  type_alias.rs
crates/topaz-ast/src/literal/: mod.rs  number.rs
crates/topaz-ast/src/parse/: mod.rs
crates/topaz-ast/src/statement/: func_call.rs  variable.rs
crates/topaz-ast/src/token/: delim.rs  keyword.rs  mod.rs  prefix.rs  punctuation.rs
crates/topaz-doky/: Cargo.toml
crates/topaz-gcc-codegen/: Cargo.toml
crates/topaz-lexer/: Cargo.toml
crates/topaz-lexer-next/: Cargo.toml
crates/topaz-lexer-next/src/: check.rs  error.rs  lib.rs  state.rs
crates/topaz-lexer/src/: lib.rs  number.rs  tests.rs
crates/topaz-macro/: Cargo.toml
crates/topaz-macro/src/: ident_manipulation.rs  lib.rs  token_macro.rs  tokens.rs  visitor.rs
crates/topaz-parser/: Cargo.toml
crates/topaz-parser-next/: Cargo.toml
crates/topaz-parser/src/: enum.rs  error.rs  expression.rs  function_decl.rs  impl.rs  imports.rs  lib.rs  macros.rs  statement.rs  struct_decl.rs  trait_decl.rs  type.rs
crates/topaz-report/: Cargo.toml
crates/topaz-report/src/: lib.rs
crates/topaz-type-checker/: Cargo.toml
crates/topaz-type-checker/src/: error.rs  lib.rs  warning.rs
crates/topaz/src/: main.rs
examples/: default-values.tp  le_syntax.tp  list.tp  option-types.ry  var.tp
lapis-server/: go.mod
lapis-server/cmd/: main.go
nix/: sources.json
scaffold/cool-reporting/codespan/: Cargo.toml
scaffold/topaz/: Cargo.toml
scaffold/topaz-ast/: Cargo.toml  build.rs
scaffold/topaz-ast-to-graphviz/: Cargo.toml
scaffold/topaz-ast-to-graphviz/src/: lib.rs
scaffold/topaz-ast/src/: block.rs  file.rs  grammar.lalrpop  grammar.rs  ident.rs  lib.rs  location.rs  path.rs  pattern.rs  punctuated.rs  types.rs  visibility.rs  visit.rs
scaffold/topaz-ast/src/expr/: mod.rs
scaffold/topaz-common/: Cargo.toml
scaffold/topaz-lexer/src/: number.rs
scaffold/topaz-llvm/: Cargo.toml
scaffold/topaz-macro/: Cargo.toml
scaffold/topaz-macro/src/: ident_manipulation.rs  lib.rs  token_macro.rs  tokens.rs
scaffold/topaz-parser/: Cargo.toml
scaffold/topaz-parser-next/: Cargo.toml
scaffold/topaz-parser-next/src/: grammar.lalrpop  lex.rs  lib.rs  parse.rs
scaffold/topaz-parser-next/tests/: func_parse.rs
scaffold/topaz-parser/src/: enum.rs  function_decl.rs  impl.rs  imports.rs  statement.rs  struct_decl.rs  trait_decl.rs  type.rs
scaffold/topaz-report/src/: lib.rs
scaffold/topaz-resolve/: Cargo.toml
scaffold/topaz-resolve/src/: lib.rs
scaffold/topaz-type-checker/: Cargo.toml
scaffold/topaz-type-checker/src/: error.rs
scaffold/topaz/src/: main.rs
spec/: sigma0.1.md
src/: README.md
src/sigma/: .gitignore  Cargo.toml  test.sigma
src/sigma-doc/: Cargo.toml
src/sigma/src/: lib.rs  main.rs  sample.tao  test.sigma
src/spm-client/: Cargo.toml
src/spm-server/: Cargo.toml
tools/topaz-lsp/: Cargo.toml
(+30 files in other folders)
