[workspace]
members = [
    "crates/lapis",
    "crates/topaz",
    "crates/topaz-common",
    "crates/topaz-macro",
    "crates/topaz-ast",
    "crates/topaz-ast-to-graphviz",
    "crates/topaz-doky",
    "crates/topaz-gcc-codegen",
    # "crates/topaz-lexer-next",
    "crates/topaz-lexer",
    "crates/topaz-llvm",
    "crates/topaz-parser",
    "crates/topaz-parser-next",
    "crates/topaz-report",
    "crates/topaz-type-checker",
    "crates/cool-reporting/codespan",
    "crates/cool-reporting/topaz-cool-reporting",
    "crates/cool-reporting/codespan-lsp"
]
