[workspace]
members = [
    # Scaffold - tools for creating AST, working with it and checking it.
    "scaffold/topaz",
    "scaffold/topaz-common",
    "scaffold/topaz-macro",
    "scaffold/topaz-ast",
    "scaffold/topaz-ast-to-graphviz",
    "scaffold/topaz-doky",
    "scaffold/topaz-gcc-codegen",
    "scaffold/topaz-parser-next",
    "scaffold/topaz-report",
    "scaffold/topaz-resolve",
    "scaffold/topaz-type-checker",
    "scaffold/cool-reporting/codespan",
    "scaffold/cool-reporting/topaz-cool-reporting",
    "scaffold/cool-reporting/codespan-lsp",

    # Tools - package managers, or the LSP server
    "tools/topaz-lsp",

    # Compiler - the thing that takes AST and transforms it into B.Y.T.E.S.
    "compiler/llvm"
]
