[package]
name = "topazc-llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0", "target-all"] }

[dependencies.topaz-ast]
path = "../../scaffold/topaz-ast"

[dependencies.topaz-parser-next]
path = "../../scaffold/topaz-parser-next"
