[package]
name = "topaz-ast"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
num-traits = "0.2.15"
num-derive = "0.3.3"
phf = { version = "0.11.1", features = ["macros"] }
derive_more = "0.99.17"
thiserror = "1.0.40"
string-interner = "0"
topaz-macro.path = "../topaz-macro"
once_cell = "1"
lalrpop-util = { version = "0", features = ["lexer", "regex"], optional = true }

[build-dependencies]
lalrpop = "0"

[features]
default = []
parse = ["grammar", "dep:lalrpop-util"]
grammar = []
