[package]
name = "topaz"
version = "0.1.0"
edition = "2021"

[dependencies]
topaz-report = {path = "../topaz-report" }
topaz-ast = {path = "../topaz-ast" }
topaz-parser-next.path = "../topaz-parser-next"
#topaz-ast-to-graphviz = {path = "../topaz-ast-to-graphviz" }
#topaz-type-checker = {path = "../topaz-type-checker" }
codespan-reporting.path = "../cool-reporting/topaz-cool-reporting"
clap = "4.1.4"
